Wed Jul 30 20:48:57 BST 2003  Colin Watson  <cjwatson@debian.org>

	Fix vulnerability 1 posted by Vade 79 <v9@fakehalo.deadpig.org> on
	BugTraq, Message-ID:
	<20030729210308.15518.qmail@www.securityfocus.com>.

	* src/manp.c (add_to_dirlist): Limit all sscanf() calls to the
	  appropriate buffer size. Leave a TODO to say that a replacement
	  that allocates its own memory would be welcome.

Wed Jul 30 20:38:40 BST 2003  Colin Watson  <cjwatson@debian.org>

	Fix vulnerabilities 2 and 3 posted by Vade 79
	<v9@fakehalo.deadpig.org> on BugTraq, Message-ID:
	<20030729210308.15518.qmail@www.securityfocus.com>.

	* src/ult_src.c (ult_softlink): Return a newly allocated string
	  rather than copying into fullpath.
	  (test_for_include): Return a newly allocated string rather than
	  copying into rel (which was a pointer into part of basename in
	  ult_src(), and wasn't reallocated in the event that the .so text
	  was too large).
	  (ult_src): Allocate basename dynamically rather than using a
	  static buffer. relative is no longer needed. Update for changes in
	  ult_softlink() and test_for_include().

Wed Jul 30 12:33:25 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/man.c (close_cat_stream): The unlink(tmp_cat_file) cleanup is
	  only pushed if (!debug), so apply the same condition to popping
	  it.

Wed Jul 30 12:21:20 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/descriptions.c (parse_descriptions): Revert this part of
	  xstrdup(NULL) change from 28 April 2003; head->whatis is undefined
	  if the else branch was taken.

Wed Jul 30 10:40:06 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/man.c (find_in_path): Avoid leaking filename for each PATH
	  element.

Wed Jul 30 10:36:22 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/compression.c (decompress): Don't free command until after
	  printing the error message that includes it.

Wed Jul 30 10:23:50 BST 2003  Colin Watson  <cjwatson@debian.org>
