@@ -1,3 +1,8 @@
+Wed Jul 30 22:15:16 BST 2003  Colin Watson  <cjwatson@debian.org>
+
+	* src/manp.c (gripe_reading_mp_config): This is a fatal error, so
+	  shouldn't be conditional on quiet.
+
 Wed Jul 30 20:48:57 BST 2003  Colin Watson  <cjwatson@debian.org>
 
 	Fix vulnerability 1 posted by Vade 79 <v9@fakehalo.deadpig.org> on
